# structured-outputs

./: README.md  model_json.py  model_schema.py  models.py  ollama_client.py  openai_client.py  pyproject.toml  sample.json  sample_script.py  simple.py  simple_hardcoded.py  sudoku.py  sudoku_second_pass.py  sudoku_simple.py  super_simple.py  system_message.py  verification_output.py
llm_clients/: ollama_client.py  openai_client.py
samples/: qa.json.json  qa_schema.json  schema.json
scripts/: model_json.py  model_schema.py  sample_script.py
