[project]
name = "structured-outputs"
version = "0.1.0"
description = "A Python project for structured outputs and integrations with various LLM clients."
readme = "README.md"
requires-python = ">=3.12"

# Define dependencies
dependencies = [
    "ollama>=0.4.5",
    "openai>=1.59.6",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
]
